objects/DMAPP__Dealmaker_Coach_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>This setting controls certain aspects of the behavior of the Dealmaker coach screen.</description>
    <fields>
        <fullName>DMAPP__Opportunity_Closed_Stages__c</fullName>
        <defaultValue>&quot;Closed Won|Closed Lost|Won - Partner&quot;</defaultValue>
        <description>This field allows an administrator to set a list of stage names which will be considered as closed stages for Dealmaker Coach rules. e.g. &quot;Closed Won|Closed Lost|Won - Partner&quot;</description>
        <inlineHelpText>This field allows an administrator to set a list of stage names which will be considered as closed stages for Dealmaker Coach rules. e.g. &quot;Closed Won|Closed Lost|Won - Partner&quot;</inlineHelpText>
        <label>Opportunity Closed Stages</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMAPP__Opportunity_Large_Amount__c</fullName>
        <defaultValue>100000</defaultValue>
        <description>This field allows an administrator to specify a value which is considered the threshold at which an opportunity is considered to be a large amount</description>
        <inlineHelpText>This field allows an administrator to specify a value which is considered the threshold at which an opportunity is considered to be a large amount</inlineHelpText>
        <label>Opportunity Large Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMAPP__Opportunity_Mid_Probability__c</fullName>
        <defaultValue>30</defaultValue>
        <description>This field allows an administrator to specify a threshold probability above which Dealmaker Coach Rules will consider the Opportunity to be reasonably progressed.</description>
        <inlineHelpText>This field allows an administrator to specify a threshold probability above which Dealmaker Coach Rules will consider the Opportunity to be reasonably progressed.</inlineHelpText>
        <label>Opportunity Mid Probability</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DMAPP__Opportunity_Small_Amount__c</fullName>
        <defaultValue>20000</defaultValue>
        <description>This field allows an administrator to specify a value below which Dealmaker Coach Rules will consider the opportunity to be a small opportunity</description>
        <inlineHelpText>This field allows an administrator to specify a value below which Dealmaker Coach Rules will consider the opportunity to be a small opportunity</inlineHelpText>
        <label>Opportunity Small Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Dealmaker Coach Settings</label>
</CustomObject>